fixed & revamped known players data for recipient field